TAG: radardbutilities-4-1-3-1
DATE: 11/11/2008
STAFF: lec
CHANGES:
1) merged TR9050 branch to the trunk

TAG: radardbutilities-tr9050-4
TAG: radardbutilities-tr9050-3
TAG: radardbutilities-tr9050-2
TAG: radardbutilities-tr9050-1
DATE: 11/04/2008
STAFF: lec
CHANGES:
1) TR9050

TAG: radardbutilities-tr9050-BP
DATE: 10/29/2008
STAFF: lec
CHANGES:
1) branch point tag for TR9050

TAG: radardbutilities-4-1-0-1
DATE: 06/12/2008
STAFF: dbm
CHANGES:
1) Modified logFileToProcess.py and logMirroredFiles.py to use the maximum
   int value allowed by sybase if the fileSize is greater than that

TAG: radardbutilities-3-5-4-1
DATE: 11/06/2007
STAFF: sc
CHANGES:
1) added logFileToProcess.csh and logFileToProcess.py

TAG: radardbutilities-3-5-1-1
DATE: 09/06/2006
STAFF: lec
CHANGES:
1) build 36; merge

TAG: radardbutilities-build36-1
DATE: 07/27/2006
STAFF: lec
CHANGES:
1) build 36

TAG: radardbutilities-build36-BP
DATE: 07/13/2006
STAFF: lec
CHANGES:
1) branch point tag for build 36

TAG: radardbutilities-3-5-0-3
TAG: radardbutilities-3-5-0-2
DATE: 07/01/2006
STAFF: lec
CHANGES:
1) mgiconfig merge

TAG: radardbutilities-mgiconfig-2
DATE: 06/15/2006
STAFF: lec
CHANGES:
1) mgiconfig

TAG: radardbutilities-mgiconfig-1
DATE: 06/13/2006
STAFF: lec
CHANGES:
1) mgiconfig

TAG: radardbutilities-mgiconfig-BP
DATE: 06/13/2006
STAFF: lec
CHANGES:
1) branch point tag for mgiconfig

TAG: radardbutilities-3-5-0-1
DATE: 04/20/2006
STAFF: lec
CHANGES:
1) MGI 3.5; converted database parameters in bin/*py to RADAR_ versions
  (DBSERVER, DBNAME, DBUSER, DBPASSWORDFILE: added RADAR_ prefix)

TAG: radardbutilities-3-4-4-1
DATE: 03/28/2006
STAFF: lec
CHANGES:
1) TR 6340/startJobStream.csh; added check for return status of startJobStream.py

TAG: radardbutilities-3-4-0-0
DATE: 10/18/2005
STAFF: sc
CHANGES: None - created tr1560 branch, but never used it
         retagging for 3.4

TAG: radardbutilities-tr1560-BP
DATE: 06/15/2005
STAFF: sc
CHANGES:
1) branch point tag

TAG: radardbutilities-1-0-17